Gnome-shell v47: Fix issue with modal dialogs spacing

--- a/gnome-shell/_common.scss
+++ b/gnome-shell/_common.scss
@@ -181,20 +181,19 @@ $slider_size: 15px;
   padding: 0 !important;
 
   .modal-dialog-content-box {
-    margin: 20px 40px;
+    margin: 10px 30px;
     spacing: 32px;
     max-width: 28em;
   }
 
   .modal-dialog-button-box {
-    padding-top: 0;
+    padding: 0 10px 10px 10px;
     .modal-dialog-button {
       @extend %button;
-      border-radius: 12px;
-      margin: 5px;
+      border-radius: 10px;
     }
   }
-
+  
   .run-dialog-entry {
     width: 20em;
     margin-bottom: 6px;
